Refactoring, tests, util documentation, NotNull.
* annotations module is now standalone with no dependencies
* api now has annotations module as api dependency
* more test coverage
* annotated utils module with new NotNull annotations which can be used
by other programs